# crabplay

./: Cargo.toml  README.md
.github/workflows/: ci.yml  fmt.yml  release.yml
docs/: architecture.md  crate-guide.md  development.md  extension-cookbook.md  library-deep-dive.md  metadata.json
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  output.rs  playlist.rs
src/audio/: player.rs
src/ui/: tui.rs
tests/: cli_integration.rs
